# gnome-todo

./: .gitlab-ci.yml  Makefile.am  README  README.md  configure.ac  meson.build  org.gnome.Todo.json
build-aux/ci/: build-flatpak.sh  debug.sh  setup.sh
build-aux/flatpak/: org.gnome.Todo.json
data/: gtd-search-provider-dbus-interfaces.xml  meson.build  org.gnome.Todo.search-provider.in  org.gnome.todo.gschema.xml  todo.gresource.xml
data/appdata/: org.gnome.Todo.appdata.xml.in  org.gnome.Todo.appdata.xml.in.in
data/theme/: Adwaita.css
data/ui/: edit-pane.ui  list-view.ui  plugin-row.ui  sidebar-list-row.ui  window.ui
doc/reference/: gnome-todo-sections.txt  meson.build
plugins/: meson.build
plugins/background/: meson.build
plugins/dark-theme/: meson.build
plugins/eds/: gtd-plugin-eds.c  gtd-provider-eds.c  gtd-task-eds.c  gtd-task-list-eds.c  meson.build
plugins/rtm/ui/: preferences.ui
plugins/scheduled-panel/: gtd-panel-scheduled.c  meson.build
plugins/score/: meson.build
plugins/today-panel/: meson.build
plugins/todo-txt/: gtd-provider-todo-txt.c  gtd-task-todo-txt.c  gtd-task-todo-txt.h  gtd-todo-txt-parser.c  gtd-todo-txt-parser.h  meson.build  syntax.md
plugins/todoist/: gtd-plugin-todoist.c  gtd-plugin-todoist.h  gtd-provider-todoist.c  gtd-todoist-oauth2.c  gtd-todoist-oauth2.h  gtd-todoist-preferences-panel.c  meson.build
plugins/todoist/ui/: oauth.ui  preferences.ui
plugins/unscheduled-panel/: meson.build
plugins/unscheduled-panel/unscheduled-panel/: __init__.py
po/: POTFILES.in  POTFILES.skip  de.po  es.po  he.po  id.po  lt.po  meson.build  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sv.po  tr.po  uk.po  zh_TW.po
src/: gtd-application.c  gtd-application.h  gtd-done-button.c  gtd-done-button.h  gtd-edit-pane.c  gtd-edit-pane.h  gtd-markdown-renderer.c  gtd-markup-renderer.c  gtd-markup-renderer.h  gtd-new-task-row.c  gtd-plugin-dialog-row.c  gtd-rows-common.c  gtd-search-provider.c  gtd-search-provider.h  gtd-task-list-view.c  gtd-task-list.c  gtd-task-row.c  gtd-task-row.h  gtd-task.c  gtd-task.h  gtd-types.h  gtd-window.c  gtd-window.h  main.c  meson.build  todo.gresource.xml
src/animation/: gtd-animatable.c  gtd-animation-enums.h  gtd-animation-utils.c  gtd-interval.c  gtd-keyframe-transition.c  gtd-keyframe-transition.h  gtd-property-transition.c  gtd-timeline.c  gtd-timeline.h  gtd-transition.c  gtd-transition.h
src/core/: gtd-plugin-manager.c  gtd-task-list.c  gtd-task.c  gtd-task.h
src/engine/: gtd-manager.c
src/gui/: gtd-application.c  gtd-empty-list-widget.c  gtd-empty-list-widget.ui  gtd-provider-popover.ui  gtd-task-list-view-model.c  gtd-task-list-view.c  gtd-task-list-view.h  gtd-task-list-view.ui  gtd-task-row.c  gtd-task-row.h  gtd-task-row.ui  gtd-theme-selector.c  gtd-theme-selector.h  gtd-theme-selector.ui  gtd-widget.c  gtd-window.c  gtd-window.h  gtd-window.ui  gui.gresource.xml  menus.ui
src/interfaces/: gtd-panel.c  gtd-provider.c
src/notification/: gtd-notification-widget.c
src/plugins/: meson.build
src/plugins/all-tasks-panel/: gtd-all-tasks-panel.c
src/plugins/eds/: gtd-task-eds.c  gtd-task-list-eds.c
src/plugins/inbox-panel/: gtd-inbox-panel.c
src/plugins/next-week-panel/: gtd-next-week-panel.c
src/plugins/scheduled-panel/: gtd-panel-scheduled.c
src/plugins/task-lists-workspace/: gtd-task-list-panel.c  gtd-task-lists-workspace.ui
src/plugins/today-panel/: gtd-panel-today.c
src/plugins/welcome/: gtd-welcome-workspace.c  gtd-welcome-workspace.ui  welcome.gresource.xml
src/sidebar/: gtd-sidebar-list-row.c  gtd-sidebar-provider-row.c  gtd-sidebar.c
src/task-list-view/: gtd-task-list-view.c
src/themes/: Adwaita-light.css  Adwaita-tasklistview.css  Adwaita-taskrow.css  Adwaita-themeselector.css  Adwaita.css
src/views/: gtd-list-selector-grid.c  gtd-list-selector-list-item.c  gtd-list-selector-list.c  gtd-list-selector-panel.c
src/widgets/: gtd-color-button.c  gtd-done-button.c  gtd-done-button.h  gtd-expandable-entry.c
tests/: dummy-provider.c  test-task-list.c
